...
            "value": "Trash"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "삭제대기함"
          }
        }
      }
    },
    "coachMark.a.title": {
      "extractionState": "manual",
...
            "value": "Albums"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "앨범"
          }
        }
      }
    },
    "tab.photos": {
      "extractionState": "manual",
...
            "value": "Library"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "보관함"
          }
        }
      }
    },
    "tab.trash": {
      "extractionState": "manual",
...
